[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/balloon-dialogue-large.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/arrow-right.png" type="Texture" id=2]
[ext_resource path="res://src/player/ui/PlayerAction.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/correct.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/wrong.wav" type="AudioStream" id=5]

[node name="PlayerAction" type="Node2D"]
z_index = 3
script = ExtResource( 3 )

[node name="Balloon-dialogue-large" type="Sprite" parent="."]
position = Vector2( 0, 1.5 )
scale = Vector2( 1, 1.04545 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -13, -2 )
texture = ExtResource( 2 )
offset = Vector2( 2, 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -2, -2 )
texture = ExtResource( 2 )
offset = Vector2( 2, 2 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 9, -2 )
texture = ExtResource( 2 )
offset = Vector2( 2, 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CorrectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="WrongSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 3.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
